# addtodash

./: CMakeLists.txt  addtodash.apparmor  addtodash.url-dispatcher  manifest.json.in
app/: CMakeLists.txt  DetailsPage.qml  HiddenWebView.qml  Main.qml  addtodash.desktop.in  database.js  manifestParser.js
container/: CMakeLists.txt  Main.qml  ThinProgressBar.qml  TransportSecurity  addtodash-container.desktop.in  addtodash-container.url-dispatcher.in  urlparser.js
container/UCSComponents/: EmptyState.qml  RadialAction.qml  RadialBottomEdge.qml
icon-plugin/: CMakeLists.txt  icon.cpp  icon.h  iconplugin.cpp  iconplugin.h  qmldir
scope/: CMakeLists.txt  client.cpp  client.h  query.cpp
scope/data/: addtodash.ini.in
shared/: CMakeLists.txt  database.js
